--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             <a class="text-light" href="#">lorem</a>
                         </li>
                         <li class="mb-2 d-block">
-                            <a class="text-light" href="#">lorem</a>
+                            <a class="text-light" href="#">lor</a>
                         </li>
                     </ul>
                 </div>
