--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="#loggedin" data-target="#loggedin" data-toggle="modal">Login</a>
                     </li>
                     <li>
-                        <a href="#register" data-toggle="modal" data-target="#register">Register</a>
+                        <a href="#register" data-toggle="modal" data-target="#register">Sign up</a>
                     </li>
                 </ul>
             </div>
